Remove accidental scrollbar. Fixes #2.

--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -66,11 +66,6 @@ p
 	margin-top: 0.5rem;
 }
 
-#main-content
-{
-	overflow: auto;
-}
-
 .bx--content
 {
 	padding: 1rem 0;
